--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Zack Hersh's Portfolio",
+  "name": "Zack Hersh's Portfolio — Creative Technology, Web Development",
   "icons": [
     {
       "src": "favicon.ico",
